syntax = "proto3";
//option java_multiple_files = true;
option java_package = "com.quancheng.examples.model";
option java_outer_classname = "Hello";
package com.quancheng.examples.model;

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}
// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message Project {
    string id = 1;
}

enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
}

message Project2 {
    string id = 1;
    Project pb = 2;
    PhoneType pt = 3;
}
